Get Likes update
Added like getter
Many other changes